<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="80dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="@android:color/holo_red_dark"
            android:textStyle="bold"
            android:layout_marginStart="5dp" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:layout_marginBottom="16dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/grey_500"
            android:textColor="@color/grey_900">

            <EditText
                android:id="@+id/etUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/loginPageUserName"
                android:layout_marginLeft="46dp"
                android:layout_marginRight="46dp"
                android:textColorHint="@color/grey_500"
                android:textColor="@color/grey_900"
                android:background="#0000"
                android:padding="14dp"
                android:gravity="start"
                android:lines="1"
                android:drawableStart="@drawable/ic_user"
                android:drawablePadding="12dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_marginLeft="56dp"
            android:layout_marginRight="56dp"
            android:layout_height="1dp"
            android:background="@color/red_500"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/grey_500"
            android:textColor="@color/grey_900">

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/loginPagePassword"
                android:layout_marginLeft="46dp"
                android:layout_marginRight="46dp"
                android:textColorHint="@color/grey_500"
                android:textColor="@color/grey_900"
                android:background="#0000"
                android:padding="14dp"
                android:inputType="textPassword"
                android:drawableStart="@drawable/ic_lock"
                android:drawablePadding="16dp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_marginLeft="56dp"
            android:layout_marginRight="56dp"
            android:layout_height="1dp"
            android:background="@color/red_500"/>

        <LinearLayout
            android:layout_marginTop="12dp"
            android:id="@+id/linear4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginStart="50dp">

                <CheckBox
                    android:id="@+id/cbRememberMe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/loginPageRememberMe"
                    android:textColor="@color/grey_900"
                    android:buttonTint="@color/grey_900"/>


            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear"
        android:background="@drawable/btn_fill_back"
        android:text="@string/loginPageLogin"
        android:textSize="15sp"
        android:textColor="#fff"
        android:gravity="center"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:padding="12dp" />

</RelativeLayout>



